<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <ProgressBar
        android:id="@+id/progressBarMaps"
        style="@style/progressBar"
        android:layout_centerVertical="true" />


    <Button
        android:id="@+id/buttonMaps"
        style="@style/buttonMaps"
        android:text="@string/buttonPrompt" />

</RelativeLayout>
